[gd_scene load_steps=31 format=3 uid="uid://dwew7bmnff2t7"]

[ext_resource type="Script" uid="uid://cfvjtfhf1skt3" path="res://scripts/managers/customization_manager.gd" id="1_73iet"]
[ext_resource type="Texture2D" uid="uid://l2atiswygex0" path="res://transitions/bg.jpg" id="1_e40qk"]
[ext_resource type="FontFile" uid="uid://bj8pwquunfxx8" path="res://Pizza Tower.ttf" id="2_gx5ds"]
[ext_resource type="Texture2D" uid="uid://cw64dvnkk3oqm" path="res://arrow.png" id="3_73iet"]
[ext_resource type="Texture2D" uid="uid://cb0v8wmpwl7nl" path="res://hand sprites/open hand.png" id="3_acx06"]
[ext_resource type="Texture2D" uid="uid://b1a546gu0sy1e" path="res://arrow_green.png" id="4_0vfys"]
[ext_resource type="Texture2D" uid="uid://nfnuiy7leqsa" path="res://hand sprites/fist hand.png" id="4_ppfrd"]
[ext_resource type="Texture2D" uid="uid://bh3rusuqfqwpi" path="res://arrow2.png" id="5_kx870"]
[ext_resource type="Texture2D" uid="uid://c2isxy3781r0g" path="res://arrow_green2.png" id="6_acx06"]
[ext_resource type="Texture2D" uid="uid://c5egsxqp6yhiq" path="res://gallery item.png" id="9_kx870"]
[ext_resource type="Texture2D" uid="uid://cpgamml75pc7k" path="res://slider.png" id="12_5esjd"]
[ext_resource type="Texture2D" uid="uid://8cnk3vpniyt7" path="res://materiales/picker_gradient.tres" id="13_5esjd"]
[ext_resource type="Texture2D" uid="uid://degr31mavnrht" path="res://marker.png" id="14_ww0q7"]
[ext_resource type="Script" uid="uid://dpq68ny2csq2w" path="res://scripts/misc/color_picker_marker.gd" id="15_redts"]
[ext_resource type="Texture2D" uid="uid://bhctgd6x4a0k1" path="res://hand sprites/open hand_eyes.png" id="16_8qgph"]
[ext_resource type="Texture2D" uid="uid://brujs4e13uioe" path="res://hand sprites/fist hand_eyes.png" id="17_w3cap"]
[ext_resource type="Texture2D" uid="uid://d1mrao3pdvet" path="res://hand sprites/open hand_fire.png" id="18_4q6wm"]
[ext_resource type="Texture2D" uid="uid://cfnw2a1umf03s" path="res://hand sprites/fist hand_fire.png" id="19_6xu0c"]
[ext_resource type="Texture2D" uid="uid://lwj1fhr7k277" path="res://hand sprites/open hand_camo.png" id="19_w3cap"]
[ext_resource type="Texture2D" uid="uid://dhu0gxyygt15l" path="res://hand sprites/fist hand_camo.png" id="20_4q6wm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ppfrd"]

[sub_resource type="Animation" id="Animation_vmxya"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_0vfys")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("buttonback:icon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_73iet")]
}

[sub_resource type="Animation" id="Animation_7r7o8"]
resource_name = "arrow_back"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("buttonback:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_73iet"), ExtResource("5_kx870")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0, false, false],
"method": &"seek"
}]
}

[sub_resource type="Animation" id="Animation_li7wd"]
resource_name = "arrow_green"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_0vfys"), ExtResource("6_acx06")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0, false, false],
"method": &"seek"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7r7o8"]
_data = {
&"RESET": SubResource("Animation_vmxya"),
&"arrow_back": SubResource("Animation_7r7o8"),
&"arrow_green": SubResource("Animation_li7wd")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kx870"]

[sub_resource type="Animation" id="Animation_acx06"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_0vfys")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("buttonback:icon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_73iet")]
}

[sub_resource type="Animation" id="Animation_ppfrd"]
resource_name = "arrow_back"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("buttonback:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_73iet"), ExtResource("5_kx870")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0, false, false],
"method": &"seek"
}]
}

[sub_resource type="Animation" id="Animation_vbge7"]
resource_name = "arrow_green"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_0vfys"), ExtResource("6_acx06")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0, false, false],
"method": &"seek"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right:icon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_0vfys"), ExtResource("6_acx06")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_smh0u"]
_data = {
&"RESET": SubResource("Animation_acx06"),
&"arrow_back": SubResource("Animation_ppfrd"),
&"arrow_green": SubResource("Animation_vbge7")
}

[node name="Customization" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_73iet")

[node name="sliders" type="CanvasGroup" parent="."]
position = Vector2(789, 278)
scale = Vector2(0.9, 1)

[node name="SliderR" type="Sprite2D" parent="sliders"]
texture = ExtResource("12_5esjd")

[node name="SliderBg" type="Sprite2D" parent="sliders/SliderR"]
modulate = Color(1, 0, 0, 1)
z_index = -1
position = Vector2(-1.111084, -3)
texture = ExtResource("13_5esjd")

[node name="Marker" type="Sprite2D" parent="sliders/SliderR"]
position = Vector2(0, -5)
scale = Vector2(1.1111112, 1)
texture = ExtResource("14_ww0q7")
script = ExtResource("15_redts")

[node name="SliderB" type="Sprite2D" parent="sliders"]
position = Vector2(0, 154)
texture = ExtResource("12_5esjd")

[node name="SliderBg" type="Sprite2D" parent="sliders/SliderB"]
modulate = Color(0, 0, 1, 1)
z_index = -1
position = Vector2(0, -2)
texture = ExtResource("13_5esjd")

[node name="Marker" type="Sprite2D" parent="sliders/SliderB"]
position = Vector2(0, -5)
scale = Vector2(1.1111112, 1)
texture = ExtResource("14_ww0q7")
script = ExtResource("15_redts")

[node name="SliderG" type="Sprite2D" parent="sliders"]
position = Vector2(0, 79)
texture = ExtResource("12_5esjd")

[node name="SliderBg" type="Sprite2D" parent="sliders/SliderG"]
modulate = Color(0, 1, 0, 1)
z_index = -1
position = Vector2(0, -2)
texture = ExtResource("13_5esjd")

[node name="Marker" type="Sprite2D" parent="sliders/SliderG"]
position = Vector2(0, -5)
scale = Vector2(1.1111112, 1)
texture = ExtResource("14_ww0q7")
script = ExtResource("15_redts")

[node name="Current" type="CanvasGroup" parent="."]

[node name="OpenHand" type="Sprite2D" parent="Current"]
texture_filter = 1
position = Vector2(215, 350)
scale = Vector2(3, 3)
texture = ExtResource("3_acx06")

[node name="FistHand" type="Sprite2D" parent="Current"]
texture_filter = 1
position = Vector2(386, 350)
scale = Vector2(3, 3)
texture = ExtResource("4_ppfrd")
flip_h = true

[node name="buttonback" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026851851
anchor_top = 0.024074074
anchor_right = 0.24153072
anchor_bottom = 0.13518518
offset_left = 1.0
offset_top = 4.0
offset_right = 1.0000305
offset_bottom = 4.0
pivot_offset = Vector2(110, 50)
theme_override_fonts/font = ExtResource("2_gx5ds")
theme_override_font_sizes/font_size = 64
theme_override_icons/icon = ExtResource("3_73iet")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ppfrd")
icon = ExtResource("3_73iet")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7r7o8")
}

[node name="left" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.087037034
anchor_top = 0.837963
anchor_right = 0.3017159
anchor_bottom = 0.9490741
offset_left = 1.0
offset_top = 4.0
offset_right = -37.85318
offset_bottom = 4.0
pivot_offset = Vector2(100, 60)
theme_override_fonts/font = ExtResource("2_gx5ds")
theme_override_font_sizes/font_size = 64
theme_override_icons/icon = ExtResource("3_73iet")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kx870")
icon = ExtResource("4_0vfys")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="right" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.73703706
anchor_top = 0.837963
anchor_right = 0.9517159
anchor_bottom = 0.9490741
offset_left = 1.0
offset_top = 4.0
offset_right = -37.85315
offset_bottom = 4.0
rotation = 3.1415927
pivot_offset = Vector2(100, 60)
theme_override_fonts/font = ExtResource("2_gx5ds")
theme_override_font_sizes/font_size = 64
theme_override_icons/icon = ExtResource("3_73iet")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kx870")
icon = ExtResource("4_0vfys")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_smh0u")
}

[node name="page1" type="CanvasGroup" parent="." groups=["pages"]]

[node name="default" type="Sprite2D" parent="page1"]
self_modulate = Color(0.7107411, 0.71074116, 0.7107411, 1)
texture_filter = 1
position = Vector2(215, 732)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_kx870")

[node name="OpenHand" type="Sprite2D" parent="page1/default"]
texture_filter = 1
position = Vector2(-31.999992, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("3_acx06")

[node name="FistHand" type="Sprite2D" parent="page1/default"]
texture_filter = 1
position = Vector2(36, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("4_ppfrd")
flip_h = true

[node name="eyes" type="Sprite2D" parent="page1"]
self_modulate = Color(0.70980394, 0.70980394, 0.70980394, 1)
texture_filter = 1
position = Vector2(540, 732)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_kx870")

[node name="OpenHand" type="Sprite2D" parent="page1/eyes"]
texture_filter = 1
position = Vector2(-32, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("16_8qgph")

[node name="FistHand" type="Sprite2D" parent="page1/eyes"]
texture_filter = 1
position = Vector2(36, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("17_w3cap")
flip_h = true

[node name="fire" type="Sprite2D" parent="page1"]
self_modulate = Color(0.70980394, 0.70980394, 0.70980394, 1)
texture_filter = 1
position = Vector2(865, 732)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_kx870")

[node name="OpenHand" type="Sprite2D" parent="page1/fire"]
texture_filter = 1
position = Vector2(-32, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("18_4q6wm")

[node name="FistHand" type="Sprite2D" parent="page1/fire"]
texture_filter = 1
position = Vector2(36, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("19_6xu0c")
flip_h = true

[node name="page2" type="CanvasGroup" parent="." groups=["pages"]]
visible = false

[node name="camo" type="Sprite2D" parent="page2"]
self_modulate = Color(0.7107411, 0.71074116, 0.7107411, 1)
texture_filter = 1
position = Vector2(215, 732)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_kx870")

[node name="OpenHand" type="Sprite2D" parent="page2/camo"]
texture_filter = 1
position = Vector2(-32, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("19_w3cap")

[node name="FistHand" type="Sprite2D" parent="page2/camo"]
texture_filter = 1
position = Vector2(36, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("20_4q6wm")
flip_h = true

[node name="aa" type="Sprite2D" parent="page2"]
self_modulate = Color(0.70980394, 0.70980394, 0.70980394, 1)
texture_filter = 1
position = Vector2(540, 732)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_kx870")

[node name="ss" type="Sprite2D" parent="page2"]
self_modulate = Color(0.70980394, 0.70980394, 0.70980394, 1)
texture_filter = 1
position = Vector2(865, 732)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_kx870")

[node name="Bg" type="Sprite2D" parent="."]
modulate = Color(0.23110586, 0.40934858, 0.4403412, 1)
z_index = -3
position = Vector2(540, 0)
texture = ExtResource("1_e40qk")

[node name="Bg2" type="Sprite2D" parent="."]
modulate = Color(0.23110586, 0.40934858, 0.4403412, 1)
z_index = -3
position = Vector2(540, -2156)
texture = ExtResource("1_e40qk")

[connection signal="color_changed" from="sliders/SliderR/Marker" to="." method="_on_marker_color_changed"]
[connection signal="color_changed" from="sliders/SliderB/Marker" to="." method="_on_marker_color_changed"]
[connection signal="color_changed" from="sliders/SliderG/Marker" to="." method="_on_marker_color_changed"]
[connection signal="mouse_entered" from="buttonback" to="." method="_on_buttonback_mouse_entered"]
[connection signal="mouse_exited" from="buttonback" to="." method="_on_buttonback_mouse_exited"]
[connection signal="pressed" from="buttonback" to="." method="_on_buttonback_pressed"]
[connection signal="mouse_entered" from="left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="left" to="." method="_on_left_mouse_exited"]
[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="mouse_entered" from="right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="right" to="." method="_on_right_mouse_exited"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
